# forecasting-migration-flows-ml

./: .gitattributes  .gitignore  DATA_INSTRUCTIONS.md  README.md  pyproject.toml  verify.txt
data_reserve/: wdi_hdr_2025-10-13.csv
docs/: 01-data-preparation-cleaning.html  02-exploratory-data-analysis.html  03-feature-engineering-modeling.html  03-feature-engineering.html  04-model-interpretation-scenario-analysis.html  04-modeling.html  05-forecasting-validation.html  index.html
notebooks/: 01-data-preparation-and-cleaning.ipynb  01-data-preparation-cleaning.ipynb  01_data_prep.ipynb  02-eda.ipynb  02-exploratory-data-analysis.ipynb  02_eda.ipynb  03-feature-engineering-and-modeling.ipynb  03-feature-engineering-modeling.ipynb  03-feature-engineering.html  03-feature-engineering.ipynb  03_modeling.ipynb  04-model-interpretation-and-scenario.ipynb  04-model-interpretation-scenario-analysis.ipynb  04-modeling.ipynb  05-forecasting-validation.ipynb
src/migration/: get_wbdata.py  merge_data.py  wdi_data.py
